# llm-code-translation

./: README.md
codetrans/: README.md  pyproject.toml  setup.cfg
codetrans/src/codetrans/: __init__.py  code_encoding_sanitization.py  codetrans_config.py  dataset_interaction.py  llm_abstraction.py  llm_chain.py  postprocessing.py  preprocessing.py  prompt_templates.py  utils.py
codetrans/tests/: test_postprocessing.py  test_utils.py
codetransbenchmark/: README.md  pyproject.toml
codetransbenchmark/config/: config.yaml  logging.ini
codetransbenchmark/scripts/: example_dolphin_mistral.bat  example_testing.bat  example_usage.bat  run_commands.py
codetransbenchmark/src/codetransbench/execution/: compile_and_test_dataset.py  compile_avatar.py  compile_avatar_source.py  compile_basicbench.py  compile_codenet.py  compile_codenet_source.py  compile_evalplus.py  compiler_output_parser.py  execution.py
codetransbenchmark/src/codetransbench/translation/: clean_generations.py  repair.py  translate_open_source.py
codetransbenchmark/src/codetransbench/utils/: cli_abstraction.py  config.py  dataset_information.py  logging_utilities.py  metadata.py  string_compare.py
codetransbenchmark/test/: test_compiler_output_parser.py
codetransbenchmark/testresults/llamafile_x/test_source/: execution_statistics.xlsx  foulty_source_statistics.xlsx
codetransbenchmark/testresults/llamafile_x/test_source/iteration_1/: llamafile_x_avatar_compileReport_from_Java_to_Java.txt  llamafile_x_avatar_compileReport_from_Java_to_Java.xlsx  llamafile_x_avatar_compileReport_from_Java_to_Java_ordered_unsuccessful.txt  llamafile_x_avatar_compileReport_from_Python_to_Python.txt  llamafile_x_avatar_compileReport_from_Python_to_Python.xlsx  llamafile_x_avatar_compileReport_from_Python_to_Python_ordered_unsuccessful.txt  llamafile_x_avatar_errors_from_Java_to_Java_1.json  llamafile_x_avatar_errors_from_Java_to_Java_1.txt  llamafile_x_avatar_errors_from_Python_to_Python_1.json  llamafile_x_avatar_errors_from_Python_to_Python_1.txt  llamafile_x_codenet_compileReport_from_Go_to_Go.txt  llamafile_x_codenet_compileReport_from_Go_to_Go.xlsx  llamafile_x_codenet_compileReport_from_Go_to_Go_ordered_unsuccessful.txt  llamafile_x_codenet_compileReport_from_Java_to_Java.txt  llamafile_x_codenet_compileReport_from_Java_to_Java.xlsx  llamafile_x_codenet_compileReport_from_Java_to_Java_ordered_unsuccessful.txt  llamafile_x_codenet_compileReport_from_Python_to_Python.txt  llamafile_x_codenet_compileReport_from_Python_to_Python.xlsx  llamafile_x_codenet_compileReport_from_Python_to_Python_ordered_unsuccessful.txt  llamafile_x_codenet_errors_from_Go_to_Go_1.json  llamafile_x_codenet_errors_from_Go_to_Go_1.txt  (+4 more)
(+197 files in other folders)
