[metadata]
description = Package for LLM inference management
long_description = file: README.md

[options]
python_requires = >= 3.11
package_dir = 
    = src
packages = find_namespace:
install_requires =
    requests
    numpy
    langchain
    langchain_community
    torch
    transformers
    einops
    bidict
    comment_parser
    python-magic-bin;platform_system=='Windows'
    

[options.packages.find]
where= src
include = codetrans*
